--- a/ui/homepage.ui
+++ b/ui/homepage.ui
@@ -10,6 +10,12 @@
     <height>410</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>511</width>
+    <height>410</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
